style.css
@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@200;400;600&display=swap");

* {
  box-sizing: border-box;
}

body {
  max-width: 100%;
  background: #ee0979; /* fallback for old browsers */
  background: -webkit-linear-gradient(
    to right,
    #ff6a00,
    #ee0979
  ); /* Chrome 10-25, Safari 5.1-6 */
  background: linear-gradient(
    to right,
    #ff6a00,
    #ee0979
  ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */

  display: flex;
  align-items: center;
  flex-direction: column;
  font-family: "Poppins", sans-serif;
  margin: 0;
  min-height: 50vh;
}

h1 {
  color: rgb(250, 250, 250);
  font-size: 5rem;
  text-align: center;
  opacity: 0.8;
}

form {
  margin: auto;
  max-width: 100%;
  width: 400px;
}

.input {
  padding: 1rem 2rem;
  box-shadow: 0 0 3px rgba(71, 70, 70, 0.911);
  display: block;
  width: 100%;
  font-size: 1.2rem;
  border: none;
}

.input:hover {
  box-shadow: 0 0 10px rgba(0, 0, 0, 0.911);
  transition: 0.3s;
}

.input:focus {
  outline: none;
}

.input::placeholder {
  color: rgba(0, 0, 0, 0.1);
}

.todos {
  background-color: rgb(255, 255, 255);
  padding: 0;
  margin: 0;
  list-style-type: none;
}

.todos li {
  font-size: 1rem;
  cursor: pointer;
  padding: 1rem 2rem;
  border-top: 1px solid #e5e5e5;
}

.todos li.completed {
  color: #b6b6b6;
  text-decoration: line-through;
}

small {
  text-align: center;
  color: #b6b6b6;
  margin-top: 3rem;
}

.clear {
  text-align: center;
  color: #3b3232;
  margin-top: 3rem;
  margin-bottom: 3rem;
  border-radius: 25px;
  border: none;
  cursor: pointer;
}

